--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@
     width: 100%;
 }
 
+.nav-link.active, .nav-link:hover {
+    color: white; /* Texte en blanc */
+    background-color:  #DCB253; /* Fond bleu */
+    border-radius: 60%;
+}
+
 .number_elem_in_cart {
     position: absolute;
     right: 0;
@@ -47,31 +53,116 @@ footer {
     padding-bottom: 4rem; /* Ajustez la hauteur de votre footer */
 }
 
-.header-bg {
-    /* background-image: url('../assets/login.png'); Remplacez 'path_to_your_image.jpg' par le chemin de votre image */
-    background-size: cover; /* Ajuste l'image pour couvrir entièrement le footer */
-    background-position: center; /* Centre l'image */
-    background-repeat: no-repeat; /* Empêche la répétition de l'image */
-    padding-top: 4rem; /* Ajustez la hauteur de votre footer */
-    padding-bottom: 4rem; /* Ajustez la hauteur de votre footer */
-}
-
-main {
+#index1 {
     background-image: url('../assets/wonka1.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     padding: 50px 0;
 }
+
+#index2 {
+    background-image: url('../assets/vedette-tabl.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 50px 0;
+}
+
+#index3 {
+    background-image: url('../assets/sweet_candy_pink_background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 50px 0;
+}
+
 .card-custom {
-    height: 100%;
+    height: 100%; /* Ajustez la hauteur selon vos besoins */
     display: flex;
     flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.2); /* Couleur de fond transparente */
+    border-radius: 15px; /* Arrondir les coins si nécessaire */
+    overflow: hidden; /* Empêcher le débordement du contenu */
+    position: relative; /* Assure que le pseudo-élément est positionné correctement */
 }
+
+.card-custom::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.2); /* Couleur de fond transparente */
+    z-index: -1; /* Assure que le fond reste en arrière-plan */
+    border-radius: 15px; /* Assure que le pseudo-élément suit les coins arrondis */
+}
+
 .card-body {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end; /* Aligner le contenu en bas */
+    padding: 1rem; /* Ajoutez un padding pour l'espace intérieur */
+    text-align: center; /* Centrer le texte */
 }
+
 .card img {
-    height: 200px;
-    object-fit: cover;
+    width: 100%;
+    height: auto; /* Laissez la hauteur auto pour respecter le ratio d'aspect */
+    object-fit: cover; /* Assure que l'image couvre la zone tout en respectant le ratio */
 }
+
+.card-title {
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+.card:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+
+                    /* REGISTRATION */
+
+.background-radial-gradient {
+    background-color: hsl(218, 41%, 15%);
+    background-image: radial-gradient(650px circle at 0% 0%,
+        hsl(218, 41%, 35%) 15%,
+        hsl(218, 41%, 30%) 35%,
+        hsl(218, 41%, 20%) 75%,
+        hsl(218, 41%, 19%) 80%,
+        transparent 100%),
+      radial-gradient(1250px circle at 100% 100%,
+        hsl(218, 41%, 45%) 15%,
+        hsl(218, 41%, 30%) 35%,
+        hsl(218, 41%, 20%) 75%,
+        hsl(218, 41%, 19%) 80%,
+        transparent 100%);
+  }
+
+#radius-shape-1 {
+    height: 220px;
+    width: 220px;
+    top: -60px;
+    left: -130px;
+    background: radial-gradient(#44006b, #ad1fff);
+    overflow: hidden;
+  }
+
+#radius-shape-2 {
+    border-radius: 38% 62% 63% 37% / 70% 33% 67% 30%;
+    bottom: -60px;
+    right: -110px;
+    width: 300px;
+    height: 300px;
+    background: radial-gradient(#44006b, #ad1fff);
+    overflow: hidden;
+  }
+
+.bg-glass {
+    background-color: hsla(0, 0%, 100%, 0.9) !important;
+    backdrop-filter: saturate(200%) blur(25px);
+  }
+
