--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+body, html {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Empêche le débordement horizontal */
+}
+
+main {
+    margin: 0;
+    padding: 0;
+}
+
+/* Utilisation de box-sizing */
+* {
+    box-sizing: border-box;
+}
+
 .roboto-medium {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -95,12 +111,28 @@ footer {
     padding-bottom: 4rem; /* Ajustez la hauteur de votre footer */
 }
 
+/* Index Sections */
+#index1, #index2, #index3 {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-size: cover;
+    overflow-x: hidden; /* Ajoutez cette ligne */
+}
+
+.container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+}
+
 #index1 {
     background-image: url('../assets/wonka1.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 20% 0;
+    padding: 50px 0;
 }
 
 #index2 {
@@ -120,13 +152,14 @@ footer {
 }
 
 .card-custom {
-    height: 100%; /* Ajustez la hauteur selon vos besoins */
+    height: 100%;
     display: flex;
     flex-direction: column;
-    background-color: rgba(255, 255, 255, 0.2); /* Couleur de fond transparente */
-    border-radius: 15px; /* Arrondir les coins si nécessaire */
-    overflow: hidden; /* Empêcher le débordement du contenu */
-    position: relative; /* Assure que le pseudo-élément est positionné correctement */
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 15px;
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 20px; /* Espacement entre les cartes */
 }
 
 .card-custom::before {
@@ -136,24 +169,24 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.2); /* Couleur de fond transparente */
-    z-index: -1; /* Assure que le fond reste en arrière-plan */
-    border-radius: 15px; /* Assure que le pseudo-élément suit les coins arrondis */
+    background-color: rgba(255, 255, 255, 0.2);
+    z-index: -1;
+    border-radius: 15px;
 }
 
 .card-body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end; /* Aligner le contenu en bas */
-    padding: 1rem; /* Ajoutez un padding pour l'espace intérieur */
-    text-align: center; /* Centrer le texte */
+    justify-content: flex-end;
+    padding: 1rem;
+    text-align: center;
 }
 
 .card img {
     width: 100%;
-    height: auto; /* Laissez la hauteur auto pour respecter le ratio d'aspect */
-    object-fit: cover; /* Assure que l'image couvre la zone tout en respectant le ratio */
+    height: auto;
+    object-fit: cover;
 }
 
 .card-title {
@@ -164,7 +197,6 @@ footer {
 .card:hover {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
-
 
                     /* REGISTRATION */
 
